[gd_scene load_steps=7 format=3 uid="uid://d0ckf5hptb8vv"]

[ext_resource type="Script" path="res://scenes/zoro.gd" id="1_8jj8r"]
[ext_resource type="Texture2D" uid="uid://sebs2avul2xx" path="res://assets/elementos_grafios/zoro.png" id="2_lxoud"]
[ext_resource type="PackedScene" uid="uid://kp0qb3as44gw" path="res://scenes/screen_bounds_movement.tscn" id="3_mbc53"]
[ext_resource type="PackedScene" uid="uid://dtco8ok7hr7te" path="res://scenes/explosion_particles.tscn" id="4_uw5r2"]
[ext_resource type="AudioStream" uid="uid://v83lyv7qufqs" path="res://assets/sounds/gameover-86548.mp3" id="5_ajcrj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y8v6f"]
radius = 30.0
height = 166.0

[node name="Zoros" type="Area2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_8jj8r")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-200, -226)
scale = Vector2(0.971765, 0.87563)
texture = ExtResource("2_lxoud")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_y8v6f")

[node name="ScreenBoundsMovement2" parent="." node_paths=PackedStringArray("node") instance=ExtResource("3_mbc53")]
node = NodePath("..")

[node name="ExplosionParticles" parent="." instance=ExtResource("4_uw5r2")]

[node name="GameOverStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ajcrj")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
